fix cart list on mobile

--- a/assets/css/Reponsive.css
+++ b/assets/css/Reponsive.css
@@ -114,6 +114,15 @@
 
     /* header search on mobile */
 
+    .header{
+        position: fixed;
+        z-index: 10;
+        width: 100%;
+        top: 0;
+        border: none;
+
+    }
+
     .header-with-search{
         justify-content: space-around;
     }
@@ -162,7 +171,21 @@
     .header__search-history{
         width:calc(100% + 80px);
     }
+    /* .header__cart-wrap{
+        position: relative;
+    } */
 
+    .header__cart-list {
+        position:fixed;
+        top: var(--header-height);
+        right: 0;
+        width: 100%;
+        padding: 0 calc((100% - 767px) / 2);
+    }
+
+    .header__cart-list::after{
+        display: none;
+    }
 
     .header__sort-bar {
         display: flex;
